# proxid

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  LICENSE  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  docker.yml
config/: default.toml  test.toml
src/: app.rs  lib.rs  main.rs
src/config/: builder.rs  mod.rs  settings.rs
src/core/: audio.rs  audio_io.rs  error.rs  mod.rs  usage.rs
src/core/audio/: format.rs  mod.rs
src/features/: mod.rs
src/features/meta/: routes.rs
src/features/speech/: dto.rs  handler.rs  mod.rs  routes.rs  service.rs
src/features/transcription/: dto.rs  extractor.rs  handler.rs  mod.rs  routes.rs  service.rs
src/infrastructure/: mod.rs
src/infrastructure/openrouter/: client.rs  dto.rs  mod.rs
src/infrastructure/transcoder/: config.rs  ffmpeg.rs  mod.rs
tests/: meta.rs  speech.rs  transcription.rs
tests/common/: mod.rs
